2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

   * extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-05-02  Geoff Youngs <g@intersect-uk.co.uk>

	* rbgdk-pixbuf.c: Bugfix for Gdk::Pixbuf#composite

2003-03-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* rbgdk-pixbuf-loader.c: rename write and close to 
	loader_write and loader_close respectively for avoiding crash with
	system's definitions of these names

	* extconf.rb: check if gdk_pixbuf_version is available or not.
	Because tml's libgdk_pixbuf-2.0-0.dll doesn't export this.
	* rbgdk-pixbuf.c: ditto

2003-02-17  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* rbgdk-pixbufanimation.c: change tvsec and tvusec to static variable.

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome.rb

2003-02-13  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* rbgdk-pixbufanimation.c,rbgdk-pixdata.c: Suppress warnings.

2003-01-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* *.[ch]: Update Copyright. 
	* sample/*: Update Copyright. Require 'gtk2'.
	* sample/loader.rb: Added.

2003-01-18  Geoff Youngs <g@intersect-uk.co.uk>

	* rbgdk-pixbuf-loader.c: Added.

2002-12-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Move GTK+'s functions to Ruby/GTK. 
	* lib/gdk_pixbuf2.rb: Remove "require 'gtk2'". Now, Ruby/GdkPixbuf doesn't depend on 
	Ruby/GTK.
	* sample/.rb: Require 'gtk2' instead of 'gdk_pixbuf2'.
	* sample/to_drawable: Move to gtk/sample/misc/.
	* rbgdkpixbuf.h: Add a file.
	* *.c: Include rbgdkpixbuf.h.
	* README, COPYING.LIB: Change license term from "the GNU LIBRARY General Public 
	License version 2." to "the GNU LESSER GENERAL PUBLIC LICENSE Version 2.1.".

2002-12-13  Hiroshi IGARASHI  <iga@ruby-lang.org>

	* extconf.rb: add space before include directory option to $CFLAGS.

2002-12-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* *.c: Change headers like as Ruby/GTK.
	* rbgdk-pixdata.c: Add a file. 

2002-11-27  Masao Mutoh  <mutoh@highway.ne.jp>
