@@ -5,7 +5,7 @@
   Copyright (c) 2002,2003 Ruby-GNOME2 Project Team
   This program is licenced under the same licence as Ruby-GNOME2.
 
-  $Id: scale.rb,v 1.7 2003/01/17 19:20:45 mutoh Exp $
+  $Id: scale.rb,v 1.8 2003/07/12 09:20:48 mutoh Exp $
 =end
 
 require 'gtk2'
@@ -18,19 +18,30 @@ end
 
 Gtk.init
 
+vbox = Gtk::VBox.new
+
 src =  Gdk::Pixbuf.new(filename)
+vbox.add(Gtk::Image.new(src))
 
-dst = src.scale(300, 300, Gdk::Pixbuf::INTERP_HYPER)
-pw = Gtk::Image.new(dst)
-pw.show
+dst = src.scale(200, 200, Gdk::Pixbuf::INTERP_NEAREST)
+dst.scale!(src, 60, 60, 90, 90, -50, 50, 6, 3)
+vbox.add(Gtk::Image.new(dst))
 
-w = Gtk::Window.new
-w.signal_connect('delete-event') do
+dst2 = Gdk::Pixbuf.new(Gdk::Pixbuf::COLORSPACE_RGB, true, 8, 200, 200)
+dst2.scale!(src, 0, 0, 100, 100, 0, 0, 1.5, 1.5)
+
+vbox.add(Gtk::Image.new(dst2))
+
+dst3 = Gdk::Pixbuf.new(Gdk::Pixbuf::COLORSPACE_RGB, true, 8, 200, 200)
+dst3.scale!(src, 0, 0, 200, 200, 0, 0, 5, 3,  Gdk::Pixbuf::INTERP_HYPER)
+vbox.add(Gtk::Image.new(dst3))
+
+window = Gtk::Window.new
+window.signal_connect('delete-event') do
   Gtk.main_quit
 end
 
-
-w.add pw
-w.show
+window.add(vbox).show_all
 
 Gtk.main
+
